kustomization/overlays/prod/prometheus/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: prometheus-ingress
spec:
  rules:
    - host: alertmanager.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: alertmanager-operated
                port:
                  name: web
            path: /
            pathType: Prefix
    - host: prometheus.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: prometheus-operated
                port:
                  name: web
            path: /
            pathType: Prefix
